<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Insurance</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="back">Back</string>
    <string name="main_tv2">About Us</string>
    <string name="main_tv3">About UsAbout UsAbout UsAbout UsAbout UsAbout UsAbout UsAbout UsAbout UsAbout UsAbout UsAbout UsAbout UsvvAbout UsAbout UsAbout UsAbout Us</string>
	<string name="main_tv4">Home</string>
	<string name="main_tv5">Insurances</string>
	<string name="main_tv6">Claims</string>
	<string name="main_tv7">My</string>
	<string name="my_btn1">Register an account</string>
	<string name="my_btn2">Log in as customer</string>
	<string name="my_btn3">Log in as staff</string>
	<string name="register_et1">Enter your username</string>
	<string name="register_et2">Enter your password</string>
	<string name="register_et3">Enter your password again</string>
	<string name="register_et4">Enter your mobile</string>
	<string name="register_et5">Choose your gender</string>
	<string name="register_et6">Enter your address</string>
	<string name="register_et7">Enter your national ID</string>
	<string name="register_et8">Enter your bankcard ID</string>
	<string name="register_genderf">Female</string>
	<string name="register_genderm">Male</string>
	<string name="register_btn">Create</string>
	<string name="login_et1">UserID</string>
	<string name="login_et2">Password</string>
	<string name="login_btn1">Log in as customer</string>
	<string name="login_btn2">Log in as staff</string>
	<string name="my_btn_claim">My Claim</string>
	<string name="my_btn_insurance">My Insurance</string>
	<string name="my_btn_info">My personal info.</string>
	<string name="my_btn_help">Help</string>
	<string name="my_btn_logout">Log out</string>
	<string name="main_btn1">Register</string>
	<string name="main_btn2">Log in</string>
	<string name="insurance_tv_pur">Purchased Insurances</string>
	<string name="insurance_tv_add">Add An Insurance</string>
	<string name="insurance_tv_insty">Insurance type:</string>
	<string name="insurance_tv_startdate">Start Date:</string>
	<string name="insurance_tv_enddate">End Date:</string>
	<string name="ins_btn_datehint">Select</string>
	<string name="insurance_btn">Add</string>
	<string name="insurance_detail_type">Insurance Type:</string>
	<string name="insurance_detail_number">Insurance Number:</string>
	<string name="insurance_detail_start">Start Date:</string>
	<string name="insurance_detail_end">End Date:</string>
	<string name="claim_tv_title">My Claims</string>
	<string name="claim_tv_add">Add a new claim</string>
	<string name="claim_btn">Submit</string>
	<string name="claim_tv_client">Client Name:</string>
	<string name="claim_tv_reason">Reason:</string>
	<string-array name="insurancetypespinner">
           <item>Travel Accident Insurance</item>
           <item>Life Insurance for Lodging Passengers</item>     
           <item>Travel Property Insurance</item>  
           </string-array>
</resources>
