<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/login_et1"
        android:layout_width="220dp"
        android:layout_height="40dp"       
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/login_et1" />

    <EditText
        android:id="@+id/login_et2"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/login_et1"
        android:layout_below="@+id/login_et1"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/login_et2" />    

    <Button
        android:id="@+id/login_btn1"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_below="@+id/login_et2"
        android:layout_marginTop="16dp"
        android:layout_toLeftOf="@+id/login_btn2"
        android:text="@string/login_btn1"
        android:textSize="15sp" />
    
    <Button
        android:id="@+id/login_btn2"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:textSize="15sp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/login_btn1"
        android:text="@string/login_btn2" />    

</RelativeLayout>
