<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_insurance_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/luggage" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView 
                android:id="@+id/tv_insurance_detail_type"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/insurance_detail_type"
                />
            <TextView 
                android:id="@+id/et_insurance_detail_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView 
                android:id="@+id/tv_insurance_detail_number"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/insurance_detail_number"
                />
            <TextView 
                android:id="@+id/et_insurance_detail_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView 
                android:id="@+id/tv_insurance_detail_start"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/insurance_detail_start"
                />
            <TextView 
                android:id="@+id/et_insurance_detail_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView 
                android:id="@+id/tv_insurance_detail_end"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/insurance_detail_end"
                />
            <TextView 
                android:id="@+id/et_insurance_detail_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/back"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"  
        android:layout_marginRight="20dp"     
        android:text="@string/back" />

</LinearLayout>
